--- a/index.html
+++ b/index.html
@@ -788,8 +788,8 @@ function fillSurveyFromData(data) {
         setTimeout(() => (status.textContent = ""), 3000);
       } catch (error) {
         console.error("Audio processing failed:", error);
-        status.textContent = "";
-        alert("There was an error processing the audio file.");
+        // status.textContent = "";
+        // alert("There was an error processing the audio file.");
       }
     });
   
