--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <script src="https://unpkg.com/survey-core@1.9.92/survey.core.min.js"></script>
   <script src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-json.min.js"></script>
+
   <link href="https://unpkg.com/survey-core@1.9.92/defaultV2.min.css" rel="stylesheet" />
   <style>
     /* Your existing CSS styles (unchanged) */
@@ -779,9 +783,9 @@ function fillSurveyFromData(data) {
         console.log("Fetched response from n8n webhook:", data);
         fillSurveyFromData(data);
 
-        const rawOutputEl = document.getElementById("rawJsonOutput");
-      rawOutputEl.textContent = JSON.stringify(data, null, 2);
-      Prism.highlightElement(rawOutputEl);
+       const rawOutputEl = document.getElementById("rawJsonOutput").querySelector("code");
+       rawOutputEl.textContent = JSON.stringify(data, null, 2);
+       Prism.highlightElement(rawOutputEl);
 
 
         status.textContent = "Form filled successfully.";
@@ -851,7 +855,7 @@ sendBtn.addEventListener("click", async () => {
     statusMsg.textContent = "✅ PDF generated from JSON uploaded successfully!";
 
     // Optional popup alert
-    // alert("Data has been sent successfully to EMR!");
+    alert("Data has been sent successfully to EMR!");
 
     console.log("Upload response:", result);
 
