--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
   <!-- Raw JSON output -->
   <div style="max-width: 700px; margin: 40px auto; padding: 20px; background: #f1f1f1; border-radius: 8px;">
     <h4 style="margin-top: 0;">Raw JSON Output from Audio</h4>
-    <pre id="rawJsonOutput" style="white-space: pre-wrap; background: #fff; padding: 12px; border-radius: 6px; overflow-x: auto;"></pre>
+    <pre id="rawJsonOutput" style="white-space: pre-wrap; background: #fff; padding: 12px; border-radius: 6px; overflow-x: auto;">
+  <code class="language-json"></code>
+</pre>
+
   </div>
 
   <!-- Patient Info Modal -->
@@ -782,10 +785,10 @@ function fillSurveyFromData(data) {
         const data = await response.json();
         console.log("Fetched response from n8n webhook:", data);
         fillSurveyFromData(data);
+const rawOutputEl = document.getElementById("rawJsonOutput").querySelector("code");
+rawOutputEl.textContent = JSON.stringify(data, null, 2);
+Prism.highlightElement(rawOutputEl);
 
-       const rawOutputEl = document.getElementById("rawJsonOutput").querySelector("code");
-       rawOutputEl.textContent = JSON.stringify(data, null, 2);
-       Prism.highlightElement(rawOutputEl);
 
 
         status.textContent = "Form filled successfully.";
