--- a/index.html
+++ b/index.html
@@ -158,21 +158,23 @@
       <input type="file" id="audioUpload" accept="audio/*" hidden />
     </label>
 
-    <select id="formSelector" class="form-selector" aria-label="Select Form Type">
-      <option value="NewPatient">New Patient</option>
-      <option value="ReturningPatient">Returning Patient</option>
-      <option value="FocusedEmergencyDeptVisit">Focused Emergency Dept Visit</option>
-      <option value="NewAddictionMedVisit">New Addiction Med Visit</option>
-      <option value="ReturnPsychVisit">Return Psych Visit</option>
-      <option value="PsychotherapySubjective">Psychotherapy Session</option>
-      <option value="FollowUpVisit">Follow-Up Visit</option>
-      <option value="ReturnBehavioralHealthVisit">Return Behavioral Health Visit</option>
-      <option value="NewMedicalVisit">New Medical Visit</option>
-      <option value="ReturnAddictionMedVisit">Return Addiction Med Visit</option>
-      <option value="NewBehavioralHealthVisit">New Behavioral Health Visit</option>
-      <option value="NewPsychVisit">New Psych Visit</option>
-      <option value="ReturnMedicalVisit">Return Medical Visit</option>
-    </select>
+   <select id="formSelector" class="form-selector" aria-label="Select Form Type">
+  <option value="NewPatient">New Patient</option>
+  <option value="ReturningPatient">Returning Patient</option>
+  <option value="FocusedEmergencyDeptVisit">Focused Emergency Dept Visit</option>
+  <option value="NewAddictionMedVisit">New Addiction Med Visit</option>
+  <option value="ReturnPsychVisit">Return Psych Visit</option>
+  <option value="PsychotherapySubjective">Psychotherapy Session</option>
+  <option value="FollowUpVisit">Follow-Up Visit</option>
+  <option value="ReturnBehavioralHealthVisit">Return Behavioral Health Visit</option>
+  <option value="NewMedicalVisit">New Medical Visit</option>
+  <option value="ReturnAddictionMedVisit">Return Addiction Med Visit</option>
+  <option value="NewBehavioralHealthVisit">New Behavioral Health Visit</option>
+  <option value="NewPsychVisit">New Psych Visit</option>
+  <option value="ReturnMedicalVisit">Return Medical Visit</option>
+  <option value="SavedTranscripts">📁 Saved Transcripts</option>
+</select>
+
 
     <button id="togglePatientInfo" title="Patient Info" aria-label="Patient Info">+</button>
 
@@ -225,6 +227,7 @@
 </div>
 
 
+<div id="transcriptContainer" style="margin-top:20px;"></div>
   <!-- Patient Info Modal -->
   <div id="patientInfoModal" role="dialog" aria-modal="true" aria-labelledby="patientInfoModalTitle">
     <div>
@@ -1080,7 +1083,10 @@ function fillSurveyFromData(data) {
 
         const data = await response.json();
         console.log("Fetched response from n8n webhook:", data);
-        fillSurveyFromData(data);
+        const objData = Array.isArray(data) && data.length > 0 ? data[0] : data;
+
+console.log("Fetched response from n8n webhook:", objData);
+fillSurveyFromData(objData);
         const formattedOutputEl = document.getElementById("formattedJsonOutput");
 if (formattedOutputEl && data.formatted_json_output) {
   formattedOutputEl.innerHTML = data.formatted_json_output;
@@ -1097,6 +1103,30 @@ if (formattedOutputEl && data.formatted_json_output) {
       }
     });
   
+
+// Additional function: fetch JSON from separate webhook-test URL and fill form
+async function fillFormFromWebhookTest() {
+  const status = document.getElementById("loadingStatus");
+  status.textContent = "Fetching data from webhook-test...";
+  try {
+    const response = await fetch("https://acai.app.n8n.cloud/webhook-test/speechmatics");
+    if (!response.ok) throw new Error("Failed to fetch from webhook-test");
+    const data = await response.json();
+   const objData = Array.isArray(data) && data.length > 0 ? data[0] : data;
+console.log("Data from webhook-test:", objData);
+fillSurveyFromData(objData);
+
+    const formattedOutputEl = document.getElementById("formattedJsonOutput");
+    if (formattedOutputEl && data.formatted_json_output) {
+      formattedOutputEl.innerHTML = data.formatted_json_output;
+    }
+    status.textContent = "Form filled from webhook-test data.";
+    setTimeout(() => (status.textContent = ""), 3000);
+  } catch (error) {
+    console.error("Error fetching webhook-test data:", error);
+    status.textContent = "";
+  }
+}
 
 const pdfInput = document.getElementById("pdfUpload");
 const sendBtn = document.getElementById("sendPdfBtn");
@@ -1328,6 +1358,79 @@ downloadBtn.addEventListener("click", () => {
   a.remove();
   URL.revokeObjectURL(url);
 });
+  
+
+// const API_KEY = "OTEaQ3hy00lqC7SGm00brFlB9hJ84HhL";
+
+// async function fetchJobs() {
+//   const response = await fetch("https://asr.api.speechmatics.com/v2/jobs/", {
+//     headers: {
+//       Authorization: `Bearer ${API_KEY}`,
+//     },
+//   });
+//   if (!response.ok) throw new Error("Failed to fetch jobs");
+//   return response.json();
+// }
+
+// async function fetchTranscript(jobId) {
+//   const response = await fetch(`https://asr.api.speechmatics.com/v2/jobs/${jobId}/transcript?format=txt`, {
+//     headers: {
+//       Authorization: `Bearer ${API_KEY}`,
+//     },
+//   });
+//   if (!response.ok) throw new Error(`Failed to fetch transcript for job ${jobId}`);
+//   return response.text();
+// }
+
+// document.getElementById("formSelector").addEventListener("change", async function () {
+//   if (this.value === "SavedTranscripts") {
+//     const container = document.getElementById("transcriptContainer");
+//     container.textContent = "Loading transcripts...";
+
+//     try {
+//       const jobsData = await fetchJobs();
+//       const jobs = jobsData.jobs || [];
+
+//       if (jobs.length === 0) {
+//         container.textContent = "No saved transcripts found.";
+//         return;
+//       }
+
+//       let transcriptsHtml = "";
+//       for (const job of jobs) {
+//         const transcriptText = await fetchTranscript(job.id);
+//         transcriptsHtml += `
+//           <div class="transcript-item">
+//             <h3>Job ID: ${job.id}</h3>
+//             <pre>${transcriptText}</pre>
+//           </div>
+//         `;
+//       }
+
+//       container.innerHTML = transcriptsHtml;
+//     } catch (error) {
+//       container.textContent = "Error loading transcripts.";
+//       console.error(error);
+//     }
+//   }
+// });
+
+
+document.getElementById("formSelector").addEventListener("change", function () {
+  const val = this.value;
+  if (val === "SavedTranscripts") {
+    window.open("new.html", "_blank"); // Open in new tab
+    // Optionally reset selection to previous or default value
+    this.value = "NewPatient"; 
+  } else {
+    // Load your normal survey form here
+    currentForm = val;
+    $("#surveyContainer").empty();
+    loadSurvey(currentForm);
+  }
+});
+
+
 
 
     
