--- a/index.html
+++ b/index.html
@@ -158,6 +158,16 @@
       <input type="file" id="audioUpload" accept="audio/*" hidden />
     </label>
 
+    
+  <label id="jobSelectLabel" for="jobSelector">Select Job ID:</label>
+  <select id="jobSelector">
+    <option value="">-- Select a Job ID --</option>
+  </select>
+
+  <div id="transcriptContainer">Loading transcripts...</div>
+
+
+
    <select id="formSelector" class="form-selector" aria-label="Select Form Type">
   <option value="NewPatient">New Patient</option>
   <option value="ReturningPatient">Returning Patient</option>
@@ -172,7 +182,7 @@
   <option value="NewBehavioralHealthVisit">New Behavioral Health Visit</option>
   <option value="NewPsychVisit">New Psych Visit</option>
   <option value="ReturnMedicalVisit">Return Medical Visit</option>
-  <option value="SavedTranscripts">📁 Saved Transcripts</option>
+
 </select>
 
 
@@ -220,12 +230,16 @@
 
   <div id="surveyContainer"></div>
 
+ 
+
+
  <!-- Formatted JSON output -->
 <div style="max-width: 700px; margin: 40px auto; padding: 20px; background: #f1f1f1; border-radius: 8px;">
   <h4 style="margin-top: 0;">Formatted Output</h4>
   <div id="formattedJsonOutput" style="background: #fff; padding: 12px; border-radius: 6px; overflow-x: auto;"></div>
 </div>
 
+<textarea id="transcriptField" placeholder="Transcript will appear here"></textarea>
 
 <div id="transcriptContainer" style="margin-top:20px;"></div>
   <!-- Patient Info Modal -->
@@ -258,8 +272,148 @@
 
   
 
-
   <script>
+
+
+
+   const API_KEY = "OTEaQ3hy00lqC7SGm00brFlB9hJ84HhL"; // Replace with your Speechmatics API key
+
+    let transcriptsMap = {}; // Store jobId -> transcript text for quick access
+
+    async function fetchJobs() {
+      const response = await fetch("https://asr.api.speechmatics.com/v2/jobs/", {
+        headers: { Authorization: `Bearer ${API_KEY}` }
+      });
+      if (!response.ok) throw new Error("Failed to fetch jobs");
+      return response.json();
+    }
+
+    async function fetchTranscript(jobId) {
+      const response = await fetch(`https://asr.api.speechmatics.com/v2/jobs/${jobId}/transcript?format=txt`, {
+        headers: { Authorization: `Bearer ${API_KEY}` }
+      });
+      if (!response.ok) throw new Error(`Failed to fetch transcript for job ${jobId}`);
+      return response.text();
+    }async function loadTranscripts() {
+  const container = document.getElementById("transcriptContainer");
+  const jobSelector = document.getElementById("jobSelector");
+
+  try {
+    const jobsData = await fetchJobs();
+    const jobs = jobsData.jobs || [];
+
+    if (jobs.length === 0) {
+      container.textContent = "No saved transcripts found.";
+      return;
+    }
+
+    // Clear container so no transcripts show by default
+    container.textContent = "";
+
+    // Populate dropdown with job IDs and datetime (formatted)
+    jobs.forEach(job => {
+      const jobId = job.id;
+      const timestamp = new Date(job.created_at); // assuming 'created_at' holds the datetime
+      const formattedDatetime = timestamp.toLocaleString(); // Adjust the format if needed
+
+      const option = document.createElement("option");
+      option.value = jobId;
+      option.textContent = `Job ID: ${jobId} - Created on: ${formattedDatetime}`; // Show both ID and datetime
+      jobSelector.appendChild(option);
+    });
+
+    // On selecting a job ID, fetch transcript, fill form and send data to webhook
+    document.getElementById("jobSelector").addEventListener("change", async function () {
+  const selectedJobId = this.value;
+  const container = document.getElementById("transcriptContainer");
+
+  if (!selectedJobId) {
+    return; // Don't do anything if no job is selected
+  }
+
+  container.textContent = "Loading transcript...";
+
+  try {
+    // Fetch transcript automatically when a job ID is selected
+    const transcriptText = await fetchTranscript(selectedJobId);
+
+    container.textContent = ""; // Clear loading text
+    fillFormWithTranscript(transcriptText); // Automatically fill the form with the transcript text
+
+    // Send the transcript to the webhook automatically
+    const response = await fetch("https://acai.app.n8n.cloud/webhook-test/speechmatics", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ transcriptText: transcriptText }),
+    });
+
+    if (!response.ok) throw new Error("Failed to send data to webhook");
+
+    const data = await response.json();
+    console.log("Webhook response:", data);
+    alert("Transcript sent to n8n webhook successfully.");
+
+  } catch (error) {
+    container.textContent = "Error loading transcript.";
+    console.error("Error:", error);
+  }
+});
+
+
+  } catch (err) {
+    container.textContent = "Error loading job list.";
+    console.error(err);
+  }
+}
+
+   function fillFormWithTranscript(text) {
+  const textarea = document.getElementById("transcriptField");
+  document.body.appendChild(transcriptField); // Append to the DOM
+
+  // Check if the element exists before setting the value
+  if (textarea) {
+    textarea.value = text;
+    textarea.focus();
+    alert("Form filled with transcript text.");
+  } else {
+    console.error("Element with id 'transcriptField' not found.");
+  }
+}
+
+
+
+async function fillFormFromWebhookTest() {
+  const status = document.getElementById("loadingStatus");
+  status.textContent = "Fetching data from webhook-test...";
+
+  try {
+    const response = await fetch("https://acai.app.n8n.cloud/webhook-test/speechmatics");
+    if (!response.ok) throw new Error("Failed to fetch from webhook-test");
+
+    const data = await response.json();
+    const objData = Array.isArray(data) && data.length > 0 ? data[0] : data;
+
+    console.log("Data from webhook-test:", objData);
+    fillSurveyFromData(objData); // Filling the form with the fetched data
+
+    const formattedOutputEl = document.getElementById("formattedJsonOutput");
+    if (formattedOutputEl && data.formatted_json_output) {
+      formattedOutputEl.innerHTML = data.formatted_json_output;
+    }
+
+    status.textContent = "Form filled from webhook-test data.";
+    setTimeout(() => (status.textContent = ""), 3000);
+
+  } catch (error) {
+    console.error("Error fetching webhook-test data:", error);
+    status.textContent = "";
+  }
+}
+
+    loadTranscripts();
+
+
+    
 
     const formTemplates = {
      NewPatient: {
