--- a/index.html
+++ b/index.html
@@ -323,36 +323,40 @@
     });
 
     // On selecting a job ID, fetch transcript, fill form and send data to webhook
-    document.getElementById("jobSelector").addEventListener("change", async function () {
+  document.getElementById("jobSelector").addEventListener("change", async function () {
   const selectedJobId = this.value;
   const container = document.getElementById("transcriptContainer");
 
-  if (!selectedJobId) {
-    return; // Don't do anything if no job is selected
-  }
+  if (!selectedJobId) return;
 
   container.textContent = "Loading transcript...";
 
   try {
-    // Fetch transcript automatically when a job ID is selected
     const transcriptText = await fetchTranscript(selectedJobId);
+    container.textContent = "";
 
-    container.textContent = ""; // Clear loading text
-    fillFormWithTranscript(transcriptText); // Automatically fill the form with the transcript text
-
-    // Send the transcript to the webhook automatically
+    // Send transcript to webhook
     const response = await fetch("https://acai.app.n8n.cloud/webhook-test/speechmatics", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ transcriptText: transcriptText }),
+      body: JSON.stringify({ transcriptText }),
     });
 
     if (!response.ok) throw new Error("Failed to send data to webhook");
 
     const data = await response.json();
-    console.log("Webhook response:", data);
-    alert("Transcript sent to n8n webhook successfully.");
+    const objData = Array.isArray(data) && data.length > 0 ? data[0] : data;
 
+    // Fill the form
+    fillSurveyFromData(objData);
+
+    // Update formatted output
+    const formattedOutputEl = document.getElementById("formattedJsonOutput");
+    if (formattedOutputEl && objData.formatted_json_output) {
+      formattedOutputEl.innerHTML = objData.formatted_json_output;
+    }
+
+    alert("Transcript sent to n8n webhook successfully.");
   } catch (error) {
     container.textContent = "Error loading transcript.";
     console.error("Error:", error);
@@ -1258,29 +1262,6 @@ if (formattedOutputEl && data.formatted_json_output) {
     });
   
 
-// Additional function: fetch JSON from separate webhook-test URL and fill form
-async function fillFormFromWebhookTest() {
-  const status = document.getElementById("loadingStatus");
-  status.textContent = "Fetching data from webhook-test...";
-  try {
-    const response = await fetch("https://acai.app.n8n.cloud/webhook-test/speechmatics");
-    if (!response.ok) throw new Error("Failed to fetch from webhook-test");
-    const data = await response.json();
-   const objData = Array.isArray(data) && data.length > 0 ? data[0] : data;
-console.log("Data from webhook-test:", objData);
-fillSurveyFromData(objData);
-
-    const formattedOutputEl = document.getElementById("formattedJsonOutput");
-    if (formattedOutputEl && data.formatted_json_output) {
-      formattedOutputEl.innerHTML = data.formatted_json_output;
-    }
-    status.textContent = "Form filled from webhook-test data.";
-    setTimeout(() => (status.textContent = ""), 3000);
-  } catch (error) {
-    console.error("Error fetching webhook-test data:", error);
-    status.textContent = "";
-  }
-}
 
 const pdfInput = document.getElementById("pdfUpload");
 const sendBtn = document.getElementById("sendPdfBtn");
