--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
 
   <link href="https://unpkg.com/survey-core@1.9.92/defaultV2.min.css" rel="stylesheet" />
   <style>
+    .transcript-box {
+  width: 100%;
+  max-width: 800px;         /* Match the form’s max width */
+  margin: 20px auto 0 auto; /* Center horizontally */
+  padding: 20px;
+  background: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 14px;
+  color: #333;
+  max-height: 250px;
+  overflow-y: auto;
+  white-space: pre-wrap;
+  line-height: 1.5;
+}
+
+.transcript-title {
+  display: block;
+  margin-bottom: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #222;
+}
+
+
     /* Your existing CSS styles (unchanged) */
     #togglePatientInfo {
       font-size: 24px;
@@ -228,6 +255,12 @@
 
   <span id="loadingStatus" class="status-text" aria-live="polite"></span>
 
+<div class="transcript-box">
+  <strong style="display:block; margin-bottom: 8px; font-size: 16px;">Transcript Preview</strong>
+  <div id="transcriptContainerr"></div> <!-- ✅ This is the one that should stay -->
+</div>
+
+
   <div id="surveyContainer"></div>
 
  
@@ -239,9 +272,9 @@
   <div id="formattedJsonOutput" style="background: #fff; padding: 12px; border-radius: 6px; overflow-x: auto;"></div>
 </div>
 
-<textarea id="transcriptField" placeholder="Transcript will appear here"></textarea>
 
-<div id="transcriptContainer" style="margin-top:20px;"></div>
+
+
   <!-- Patient Info Modal -->
   <div id="patientInfoModal" role="dialog" aria-modal="true" aria-labelledby="patientInfoModalTitle">
     <div>
@@ -325,15 +358,18 @@
     // On selecting a job ID, fetch transcript, fill form and send data to webhook
   document.getElementById("jobSelector").addEventListener("change", async function () {
   const selectedJobId = this.value;
-  const container = document.getElementById("transcriptContainer");
+  const container = document.getElementById("transcriptContainerr");
 
   if (!selectedJobId) return;
 
   container.textContent = "Loading transcript...";
 
   try {
-    const transcriptText = await fetchTranscript(selectedJobId);
-    container.textContent = "";
+
+    
+  const transcriptText = await fetchTranscript(selectedJobId);  // <-- gets the transcript
+    container.innerHTML = transcriptText.replace(/\n/g, "<br>"); // <-- shows it immediately
+
 
     // Send transcript to webhook
     const response = await fetch("https://acai.app.n8n.cloud/webhook/speechmatics", {
@@ -356,7 +392,7 @@
       formattedOutputEl.innerHTML = objData.formatted_json_output;
     }
 
-    alert("Transcript sent to n8n webhook successfully.");
+    alert("Raw transcirpt being processed...");
   } catch (error) {
     container.textContent = "Error loading transcript.";
     console.error("Error:", error);
@@ -371,7 +407,13 @@
 }
 
    function fillFormWithTranscript(text) {
-  const textarea = document.getElementById("transcriptField");
+const transcriptText = "This is your transcript.\nIt has multiple lines.\nMake sure it's readable.";
+
+// Get the container and update it with line breaks
+const transcriptBox = document.getElementById("transcriptContainer");
+transcriptBox.innerHTML = transcriptText.replace(/\n/g, "<br>");
+
+
   document.body.appendChild(transcriptField); // Append to the DOM
 
   // Check if the element exists before setting the value
