--- a/index.html
+++ b/index.html
@@ -312,14 +312,26 @@
    const API_KEY = "OTEaQ3hy00lqC7SGm00brFlB9hJ84HhL"; // Replace with your Speechmatics API key
 
     let transcriptsMap = {}; // Store jobId -> transcript text for quick access
+async function fetchJobs() {
+  try {
+    const response = await fetch("https://asr.api.speechmatics.com/v2/jobs/", {
+      headers: { Authorization: `Bearer ${API_KEY}` }
+    });
 
-    async function fetchJobs() {
-      const response = await fetch("https://asr.api.speechmatics.com/v2/jobs/", {
-        headers: { Authorization: `Bearer ${API_KEY}` }
-      });
-      if (!response.ok) throw new Error("Failed to fetch jobs");
-      return response.json();
+    if (!response.ok) {
+      const errorText = await response.text();
+      console.error("Failed to fetch jobs:", response.status, errorText);
+      return { jobs: [] };
     }
+
+    const data = await response.json();
+    console.log("Speechmatics jobs data:", data);
+    return data;
+  } catch (err) {
+    console.error("Network error while fetching jobs:", err);
+    return { jobs: [] };
+  }
+}
 
     async function fetchTranscript(jobId) {
       const response = await fetch(`https://asr.api.speechmatics.com/v2/jobs/${jobId}/transcript?format=txt`, {
@@ -344,16 +356,22 @@
     container.textContent = "";
 
     // Populate dropdown with job IDs and datetime (formatted)
-    jobs.forEach(job => {
-      const jobId = job.id;
-      const timestamp = new Date(job.created_at); // assuming 'created_at' holds the datetime
-      const formattedDatetime = timestamp.toLocaleString(); // Adjust the format if needed
+jobs.forEach(job => {
+  const jobId = job.id;
+  const fileName = job.data_name || "Unnamed File"; // Use data_name instead of tracking.title
+  const timestamp = new Date(job.created_at).toLocaleString();
 
-      const option = document.createElement("option");
-      option.value = jobId;
-      option.textContent = `Job ID: ${jobId} - Created on: ${formattedDatetime}`; // Show both ID and datetime
-      jobSelector.appendChild(option);
-    });
+  const option = document.createElement("option");
+  option.value = jobId;
+  option.textContent = `${fileName} - ${timestamp}`;
+  jobSelector.appendChild(option);
+
+  console.log("Job object:", job); // For debugging
+});
+
+
+
+
 
     // On selecting a job ID, fetch transcript, fill form and send data to webhook
   document.getElementById("jobSelector").addEventListener("change", async function () {
